// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en 1`] = `
<Layout
  lang="en"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="en"
    meta={Array []}
    title="Not Found | Smart Contract Programmer"
  />
  <div
    className="NotFound"
  >
    <h1
      className="NotFound-header"
    >
      404
    </h1>
    <div
      className="NotFound-sub-header"
    >
      Not Found
    </div>
  </div>
</Layout>
`;

exports[`jp 1`] = `
<Layout
  lang="jp"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="en"
    meta={Array []}
    title="ページが見つかりません | Smart Contract Programmer"
  />
  <div
    className="NotFound"
  >
    <h1
      className="NotFound-header"
    >
      404
    </h1>
    <div
      className="NotFound-sub-header"
    >
      ページが見つかりません
    </div>
  </div>
</Layout>
`;

exports[`not en nor jp 1`] = `
<Layout
  lang="en"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="en"
    meta={Array []}
    title="Not Found | Smart Contract Programmer"
  />
  <div
    className="NotFound"
  >
    <h1
      className="NotFound-header"
    >
      404
    </h1>
    <div
      className="NotFound-sub-header"
    >
      Not Found
    </div>
  </div>
</Layout>
`;
